# Othello_Reinforcement_learning_test

./: .gitignore  CLAUDE.md  LICENSE  README.md  REMAINING_TASKS.md  benchmark.py  benchmark_ai.py  benchmark_model.py  demo_gui.py  main.py  pyproject.toml  run_gui.py  run_web.py  setup.py  test_gui_automated.py  test_gui_basic.py
.claude/: README.md
.claude/agents/: mentor.md  ml_engineer.md  ops.md  pdm.md  qa_engineer.md  tech_lead.md
.claude/commands/: architect.md  code.md  doc.md  explain.md  feature.md  fix.md  optimize.md  plan.md  refactor.md  review.md  ship.md  test.md
.claude/hooks/: formatter.py  gatekeeper.py  structure_gen.py
.claude/skills/benchmark/: SKILL.md  run.py
.claude/skills/code-inspector/: SKILL.md  analyzer.py
.claude/skills/data-peeker/: SKILL.md  peek.py
.claude/skills/log-analyze/: SKILL.md  parser.py
.claude/skills/visualize/: SKILL.md  (+1 more)
configs/: debug_6x6.yaml  default_8x8.yaml  fast_8x8.yaml  strong_8x8.yaml  test.yaml  ultrafast_8x8.yaml
docs/: implementation_summary.md  reinforcement_learning_guide.md  内部設計書.md  外部設計書.md  実装計画書.md  要件定義書.md
src/cython/: __init__.py  bitboard.c  bitboard.pxd  bitboard.pyx
src/eval/: __init__.py  arena.py  players.py
src/gui/: __init__.py  app.py  board_ui.py
src/mcts/: __init__.py  mcts.py  node.py
src/model/: __init__.py  net.py
src/train/: __init__.py  buffer.py  parallel_self_play.py  self_play.py  trainer.py
src/web/: __init__.py  api.py  game_manager.py  schemas.py
tests/: test_bitboard.py  test_eval.py  test_mcts.py  test_model.py  test_train.py  test_web_e2e.py
(+9 files in other folders)
