[build-system]
requires = ["setuptools>=61.0", "wheel", "cython>=3.0", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

[project]
name = "othello-alphazero"
version = "0.1.0"
description = "AlphaZero方式のオセロAI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "cython>=3.0",
    "pyyaml>=6.0",
    "tensorboard>=2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "flake8>=6.0",
    "black>=23.0",
    "isort>=5.12",
]
gui = [
    "pyside6>=6.5",
]
onnx = [
    "onnx>=1.14",
    "onnxruntime>=1.15",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
